--- a/mysite/templates/history_log.html
+++ b/mysite/templates/history_log.html
@@ -1,1 +1,47 @@
-hello
+
+<title>日志信息</title>
+
+<style type="text/css">
+table.imagetable {
+    font-family: verdana,arial,sans-serif;
+    font-size:11px;
+    color:#333333;
+    border-width: 1px;
+    border-color: #999999;
+    border-collapse: collapse;
+}
+table.imagetable th {
+    background:#b5cfd2;
+    border-width: 1px;
+    padding: 8px;
+    border-style: solid;
+    border-color: #999999;
+}
+table.imagetable td {
+    background:#dcddc0;
+    border-width: 1px;
+    padding: 8px;
+    border-style: solid;
+    border-color: #999999;
+}
+</style>
+
+<style>
+.font{font-size:12px}
+</style>
+
+<!-- Table goes in the document BODY -->
+<table class="imagetable" style="font-size:12px" width="500" height="100">
+<tr>
+    <th>域名</th><th>端口</th>
+</tr>
+<tr>
+    <td align="center"  valign="middle">www.baidu.com</td>
+    <td align="center"  valign="middle">80</td>
+</tr>
+<tr>
+    <td align="center"  valign="middle">www.chinacache.com</td>
+    <td align="center"  valign="middle">80</td>
+</tr>
+</table>
+
