添加负责人信息

--- a/mysite/templates/area_info.html
+++ b/mysite/templates/area_info.html
@@ -56,7 +56,7 @@
         <span> 北京 </span>
     </td>
     <td align="center"  valign="middle" style="background-color:#EEEEEE;height:50px;width:400px;text-align:top;">
-        <span pid="2"> 王大爷 </span>
+        <span pid="2"> <a href="/person_info/?name=王大爷" target="_blank">王大爷 </a></span>
     </td>
     <td align="center"  valign="middle" style="background-color:#99bbbb;height:50px;width:400px;text-align:top;">
     <a href="/email_info/?area_name=北京" target="_blank">查看</a>
